[gd_scene load_steps=4 format=3 uid="uid://pmqhmk878ped"]

[ext_resource type="Script" uid="uid://bbf5jsyvj6vgj" path="res://scripts/couch_right.gd" id="1_cf84c"]
[ext_resource type="Texture2D" uid="uid://brd6m0213kydv" path="res://assets/furniture/couchRightOutline.png" id="1_dpjej"]
[ext_resource type="Texture2D" uid="uid://crgn0t6hdlwrf" path="res://assets/furniture/couch_side_r_nice.png" id="2_cf84c"]

[node name="couchRight" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_cf84c")

[node name="outline" type="Sprite2D" parent="."]
texture = ExtResource("1_dpjej")

[node name="couch" type="Sprite2D" parent="."]
texture = ExtResource("2_cf84c")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-186, -190, 27, -189, 75, -188, 179, -190, 179, 194, 80, 213, -101, 226, -183, 209, -187, 170)

[node name="couchRightArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="couchRightArea"]
polygon = PackedVector2Array(23, -386, -39, -324, -264, -287, -269, 197, -209, 328, -165, 420, 99, 429, 220, 378, 287, 236, 243, -381, 133, -409)

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="area_entered" from="couchRightArea" to="." method="_on_couch_right_area_area_entered"]
[connection signal="area_exited" from="couchRightArea" to="." method="_on_couch_right_area_area_exited"]
